--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.10"
 transformers = "^4.44.2"
-clip = "^0.2.0"
 numpy = "^2.1.1"
 pydantic = "^2.9.1"
 pillow = "^10.4.0"
@@ -16,6 +15,7 @@ asyncio = "^3.4.3"
 fastapi = "^0.114.1"
 nltk = "^3.9.1"
 torch = "2.0.1"
+openai-clip = "^1.0.1"
 
 
 [build-system]
