--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ nltk = "^3.9.1"
 openai-clip = "^1.0.1"
 huggingface-hub = "^0.24.7"
 transformers = "^4.44.2"
+torch = "^2.4.0"
+torchvision = "^0.19.0"
 
 
 [build-system]
