--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ env:
 on:
   push:
     branches:
-      - main
+      - kieran
     paths-ignore:
       - "CHANGELOG.md"
 
@@ -99,4 +99,3 @@ jobs:
             --tag ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest \
             .
           docker push --all-tags ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}
-
